--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>bidi routing example</title>
   </head>
   <body>
     <div id="my-app-area"></div>
